pam: Make sure to never block SIGCHLD

Blocking this signal prevented MDM logins, as the slave
couldn't notice the death of the greeter)

Signed-off-by: Stef Walter <stefw@gnome.org>
 * Use goto and a single return path

https://bugzilla.gnome.org/show_bug.cgi?id=745673